--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Newsletters</span></h3>
-										<a href="newsletters.eachlittlethings.site">Subscribe To Newsletters</a>
+										<a href="https://newsletters.eachlittlethings.site">Subscribe To Newsletters</a>
 									</li>
 								</ul>
 							</div>
