--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
 						<p>Just ask us anything we will get to you ASAP</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
-								<form method="post" action="https://formsubmit.co/formsubmit-elts@yahoo.com
-
-								" method="POST">
+								<form method="post" action="https://formsubmit.io/send/admin@eachlittlethings.site" method="POST">
 									<div class="row gtr-uniform gtr-50">
 										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
