--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<meta name="twitter:card" content="summary_large_image"/>
+		<meta name="twitter:site" content="Eachlittlethings"/>
+		<meta name="twitter:creator" content="haripavany"/>
+		<meta name="twitter:title" content="Support Us"/>
+		<meta name="twitter:description" content="Support our website with a contribution of any size with your support helps protect the Each Little Things"/>
+		<meta name="twitter:image" content="https://raw.githubusercontent.com/Sriram14357/support-us/master/images/support%2Bus.jpg"/>
 	</head>
 	<body class="is-preload">
 
