--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="twitter:site" content="Eachlittlethings"/>
 		<meta name="twitter:creator" content="haripavany"/>
 		<meta name="twitter:title" content="Support Us"/>
-		<meta name="twitter:description" content="Support our website with a contribution of any size with your support helps protect the Each Little Things"/>
+		<meta name="twitter:description" content="Support our website with a contribution of any size. your helps protect Each Little Things"/>
 		<meta name="twitter:image" content="https://raw.githubusercontent.com/Sriram14357/support-us/master/images/support%2Bus.jpg"/>
 	</head>
 	<body class="is-preload">
