--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<p>Support our website with a contribution of any size. Your support helps protect the Each Little Things independence and it means we can keep delivering quality articles that’s open for everyone.</p>
 						<ul class="actions">
 							<li><a href="https://paypal.me/haripavany" class="button">Paypal</a></li>
-							<li><a href="https://www.patreon.com/bePatron?u=33789816" data-patreon-widget-type="become-patron-button">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script></li>
+							<li><a href="https://patreon.com/haripavany" class="button">Patreon</a></li>
 							<li><a href="https://ko-fi.com/haripavany" class="button">Ko-fi</a></li>
 						</ul>
 					</section>
