--- a/index.html
+++ b/index.html
@@ -32,7 +32,42 @@
 						</header>
 						<p>Support our website with a contribution of any size. Your support helps protect the Each Little Things independence and it means we can keep delivering quality articles that’s open for everyone.</p>
 						<ul class="actions">
-							<li><a href="https://paypal.me/haripavany" class="button">Paypal</a></li>
+							<li><div id="smart-button-container">
+      <div style="text-align: center;">
+        <div id="paypal-button-container"></div>
+      </div>
+    </div>
+  <script src="https://www.paypal.com/sdk/js?client-id=Abu2cJBCkE9vkFwIGaP_fR-jnElYmVUR3MlgYmuAlV0-232_6Mdi-Xu98m22CeM0qd5TD4bwMsZ4EQxK&currency=USD" data-sdk-integration-source="button-factory"></script>
+  <script>
+    function initPayPalButton() {
+      paypal.Buttons({
+        style: {
+          shape: 'rect',
+          color: 'gold',
+          layout: 'horizontal',
+          label: 'paypal',
+          tagline: true
+        },
+
+        createOrder: function(data, actions) {
+          return actions.order.create({
+            purchase_units: [{"description":"Support this website.","amount":{"currency_code":"USD","value":1}}]
+          });
+        },
+
+        onApprove: function(data, actions) {
+          return actions.order.capture().then(function(details) {
+            alert('Transaction completed by ' + details.payer.name.given_name + '!');
+          });
+        },
+
+        onError: function(err) {
+          console.log(err);
+        }
+      }).render('#paypal-button-container');
+    }
+    initPayPalButton();
+  </script></li>
 						</ul>
 					</section>
 
