--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     }
     initPayPalButton();
   </script></li>
+							<li><link rel="payment" href="bitcoin:34faxyLcnK362meapiR837X8vVg95XmMJm" title="Donate bitcoins, if my website was of help to you"></li>
 						</ul>
 					</section>
 
