--- a/index.html
+++ b/index.html
@@ -68,7 +68,16 @@
     }
     initPayPalButton();
   </script></li>
-							<li><link rel="payment" href="bitcoin:34faxyLcnK362meapiR837X8vVg95XmMJm" title="Donate bitcoins, if my website was of help to you"></li>
+							<li><div class="razorpay-embed-btn" data-url="https://pages.razorpay.com/pl_H98wd6KPNR045s/view" data-text="Pay Now" data-color="#528FF0" data-size="large">
+  <script>
+    (function(){
+      var d=document; var x=!d.getElementById('razorpay-embed-btn-js')
+      if(x){ var s=d.createElement('script'); s.defer=!0;s.id='razorpay-embed-btn-js';
+      s.src='https://cdn.razorpay.com/static/embed_btn/bundle.js';d.body.appendChild(s);} else{var rzp=window['__rzp__'];
+      rzp && rzp.init && rzp.init()}})();
+  </script>
+</div>
+    </li>
 						</ul>
 					</section>
 
