--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     }
     initPayPalButton();
   </script></li>
-							<li><div class="razorpay-embed-btn" data-url="https://pages.razorpay.com/pl_H98wd6KPNR045s/view" data-text="Pay Now" data-color="#528FF0" data-size="large">
+							<li><div class="razorpay-embed-btn" data-url="https://pages.razorpay.com/pl_H98wd6KPNR045s/view" data-text="Buy Me a Coffee" data-color="#528FF0" data-size="small">
   <script>
     (function(){
       var d=document; var x=!d.getElementById('razorpay-embed-btn-js')
